feat: Add favicon and fix hero poster
Introduces a favicon for the NeoEase brand and replaces the placeholder hero poster with a solid dark background SVG. This improves branding and visual consistency.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NeoEase - Menos esforço, mais resultado.</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='15' fill='%2305140A'/><text x='50%' y='50%' dominant-baseline='central' text-anchor='middle' font-size='70' font-weight='bold' fill='%2300FF41'>N</text></svg>" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -58,5 +59,6 @@
 </head>
 <body class="bg-dark-bg text-light-text font-sans antialiased">
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
