fix(assets): Update favicon and logo to Imgur CDN
Switches the website's favicon and logo to use an Imgur CDN link. This change ensures consistent asset loading and potentially faster delivery. It also adds the dotlottie-wc script for future animation integration.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NeoEase - Menos esforço, mais resultado.</title>
-    <link rel="icon" href="/assets/logoSite2.png" />
+    <link rel="icon" href="https://i.imgur.com/hLWBAk1.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -46,6 +46,7 @@
         background-color: #05140A;
       }
     </style>
+<script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
 <script type="importmap">
 {
   "imports": {
